--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,65 @@
 .App {
-  text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
   margin-top: 120px;
 }
+
+.paquetes{
+  float: left
+}
+
+.ventas{
+  float: right;
+  margin-left: 2rem;
+}
+
+div{
+  margin-top: 1rem;
+}
+
+label{
+  margin-right: 2px;
+}
+
+.contador{
+  float:right;
+  margin-left: 2rem;
+}
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+
+
+body {
+  background-color: #eff9d6;
+}
+
+
+.a {
+  color: white;
+}
+
+input {
+  padding: 8px;
+  margin: 10px;
+  outline: none;
+}
+
+button {
+  padding: 8px;
+  margin: 10px;
+}
+
