--- a/src/App.css
+++ b/src/App.css
@@ -43,9 +43,6 @@ code {
 }
 
 
-body {
-  background-color: #eff9d6;
-}
 
 
 .a {
@@ -63,3 +60,9 @@ button {
   margin: 10px;
 }
 
+.image{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 20%;
+}
